[package]
name = "sptr"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "sptr: The Strict Provenance Polyfill"
repository = "https://github.com/Gankra/sptr"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["deprecate_problems"]
deprecate_problems = []
uptr = []
opaque_fn = []