[package]
name = "sptr"
version = "0.3.2"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "sptr: The Strict Provenance Polyfill"
repository = "https://github.com/Gankra/sptr"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
uptr = []
opaque_fn = []
